Desktop version 1.0 released

--- a/index.html
+++ b/index.html
@@ -20,39 +20,44 @@
 </head>
 
 <body>
-  <div class="mobile-ctn left">
-    <div class="logo">
-      <img src="images/content/adidasLogo.png" alt="adidas logo" />
-    </div>
-    <div class="hero">
-      <img src="./images/content/mobileHeroImg.png" alt="">
-    </div>
-    <main class="content">
-      <header>
-        <h1 class="important-text">We're</h1>
-        <h1>Coming</h1>
-        <h1>Soon</h1>
-      </header>
-      <p>Hello friends! We are currently building our new sports and comfort
-        clothing
-        store. Add your email address below to stay up-to-date with
-        announcements and
-        our launch proposals.
-      </p>
-      <form class="cta" action="/sign-up" method="post">
-        <div class="cta-container">
-          <div class="email-input">
-            <input type="email" name="email" id="email"
-              placeholder="Email Address">
-          </div>
-          <div class="btn-container">
-            <input type="submit" value="Go">
-          </div>
+  <div class="container">
+    <div class="mobile-ctn left">
+      <div class="inner-container">
+        <div class="logo">
+          <img src="images/content/adidasLogo.png" alt="adidas logo" />
         </div>
-      </form>
-    </main>
+        <div class="hero">
+          <img src="./images/content/mobileHeroImg.png" alt="">
+        </div>
+        <main class="content">
+          <header>
+            <h1 class="important-text">We're</h1>
+            <h1>Coming</h1>
+            <h1>Soon</h1>
+          </header>
+          <p>Hello friends! We are currently building our new sports and comfort
+            clothing
+            store. Add your email address below to stay up-to-date with
+            announcements and
+            our launch proposals.
+          </p>
+          <form class="cta" action="/sign-up" method="post">
+            <div class="cta-container">
+              <div class="email-input">
+                <input type="email" name="email" id="email"
+                  placeholder="Email Address">
+              </div>
+              <div class="btn-container">
+                <input type="submit" value="Go">
+              </div>
+            </div>
+          </form>
+        </main>
+      </div>
+    </div>
+    <!-- Magenta -->
+    <div class="right"></div>
   </div>
-  <aside class="right"></aside>
 </body>
 
 </html>
